--- a/src/assets/stylesheets/modules/mixin.scss
+++ b/src/assets/stylesheets/modules/mixin.scss
@@ -1,89 +1,19 @@
 //font family
-
-@mixin font-figtree-light() {
-  font-family: "Figtree", sans-serif;
-  font-weight: 300;
+@mixin kanit-thin() {
+  font-family: "Kanit", sans-serif;
+  font-weight: 100;
+  font-style: normal;
 }
 
-@mixin font-figtree-book() {
-  font-family: "Figtree", sans-serif;
+@mixin kanit-extralight() {
+  font-family: "Kanit", sans-serif;
+  font-weight: 200;
+  font-style: normal;
+}
+
+@mixin kanit-regular() {
+  font-family: "Kanit", sans-serif;
   font-weight: 400;
+  font-style: normal;
 }
 
-@mixin font-figtree-medium() {
-  font-family: "Figtree", sans-serif;
-  font-weight: 500;
-}
-
-@mixin font-figtree-bold() {
-  font-family: "Figtree", sans-serif;
-  font-weight: 700 !important;;
-}
-
-@mixin font-figtree-black() {
-  font-family: "Figtree", sans-serif;
-  font-weight: 900 !important;
-}
-
-
-
-//=============================================
-@mixin primary-font-light() {
-  font-family: "Figtree", sans-serif;
-  font-weight: 300;
-}
-
-@mixin primary-font-regular() {
-  font-family: "Figtree", sans-serif;
-  font-weight: 400;
-}
-
-@mixin primary-font-medium() {
-  font-family: "Figtree", sans-serif;
-  font-weight: 500;
-}
-
-@mixin primary-font-semi-bold() {
-  font-family: "Figtree", sans-serif;
-  font-weight: 600;
-}
-
-@mixin primary-font-bold() {
-  font-family: "Figtree", sans-serif;
-  font-weight: 700;
-}
-
-@mixin primary-font-black() {
-  font-family: "Figtree", sans-serif;
-  font-weight: 900;
-}
-//=============================================
-
-@mixin font-sinhala-regular() {
-  font-family: "Noto Sans Sinhala", sans-serif;
-  font-weight: 400;
-}
-
-@mixin font-sinhala-medium() {
-  font-family: "Noto Sans Sinhala", sans-serif;
-  font-weight: 500;
-}
-
-@mixin font-sinhala-semi-bold() {
-  font-family: "Noto Sans Sinhala", sans-serif;
-  font-weight: 600;
-}
-
-@mixin font-sinhala-bold() {
-  font-family: "Noto Sans Sinhala", sans-serif;
-  font-weight: 700;
-}
-
-@mixin font-sinhala() {
-  font-family: "Noto Sans Sinhala", sans-serif;
-  font-weight: 700;
-}
-
-@mixin overflow-hidden() {
-  overflow: hidden;
-}
