--- a/src/assets/stylesheets/modules/variable.scss
+++ b/src/assets/stylesheets/modules/variable.scss
@@ -1,22 +1,10 @@
 $primary-color: #7E3CF7;
+$bg: #eeedef;
 
 
 $font-xxs: 12px;
 $font-sm: 14px;
 $font-md: 16px;
-
-
-.light {
-  --primary-color: #7E3CF7;
-}
-
-.dark {
-  --primary-color: #090313;
-
-}
-
-.pink {
-  --primary-color: #a40dc7;
-}
+$font-lg: 24px;
 
 
