--- a/src/assets/stylesheets/modules/mixin.scss
+++ b/src/assets/stylesheets/modules/mixin.scss
@@ -17,3 +17,15 @@
   font-style: normal;
 }
 
+@mixin Kalnia-extralight() {
+  font-family: "Kalnia", sans-serif;
+  font-weight: 200;
+  font-style: normal;
+}
+
+@mixin Kalnia-bold() {
+  font-family: "Kalnia", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
