Close button completed

--- a/src/components/signIn/styles.scss
+++ b/src/components/signIn/styles.scss
@@ -19,7 +19,7 @@
 .signin_subtitle {
     @include Kalnia-extralight();
     font-size: $font-md;
-    color: $secondary-test-color;
+    color: $secondary-text-color;
     margin-bottom: 1.5rem;
   }
  
