--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -1,32 +1,31 @@
 @use '../../assets/stylesheets/modules/mixin' as *;
+@use '../../assets/stylesheets/modules/variable' as *;
 
 .gradient-btn {
-  @include kanit-regular(); 
-  font-weight: 600; 
-  font-size: 14px;
+  @include kanit-regular(); // Kanit font base
+  font-weight: 600; // Semi-bold
+  font-size: $font-sm; // 14px from variables
 
   /* Layout */
   position: absolute;  
   top: 284px;
   left: 35px;
   width: 320px;
-  height: 55px; 
+  height: 55px;
   border-radius: 13px;
 
   /* Padding */
   padding-top: 17px;
   padding-bottom: 17px;
 
-  /* Visuals */
-  background: linear-gradient(90deg, #a07b7b 0%, #7e3cf7 100%);
+  /* Colors & Effects */
+  background: linear-gradient(90deg, #a07b7b 0%, $primary-color 100%);
+  color: $bg;
   border: none;
-  color: #fff;
   cursor: pointer;
-  transition: all 0.3s ease;
   box-shadow: 0 4px 12px rgba(126, 60, 247, 0.3);
   display: inline-block;
-//   margin-right: 900px; 
-//   align-self: flex-start;
+  transition: all 0.3s ease;
 
   &:hover {
     transform: translateY(-2px);
