--- a/src/assets/stylesheets/modules/variable.scss
+++ b/src/assets/stylesheets/modules/variable.scss
@@ -3,9 +3,17 @@ $bg: #FFFFFF;
 $secondary-text-color: #9FA7C3;
 $box-color: #D8D6E7;
 $closeBtn-bg: #EEE8FB;
+$btn-primary-bg: linear-gradient(90deg, #a07b7b 0%, $primary-color 100%);
+
+$text-white:#F5F2FF;
+
 
 $font-xxs: 12px;
 $font-sm: 14px;
 $font-md: 16px;
 $font-lg: 24px;
 $font-xxl: 34px;
+
+$border-radius-lg: 20px;
+$border-radius-md: 16px;
+$border-radius-sm: 12px;
